--- a/index.css
+++ b/index.css
@@ -1,31 +1,49 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
+}
+body {
+  background-color: blueviolet;
+}
 
+.main {
+  text-align: center;
+  padding: 10px;
+  grid-template-rows: 1fr 1fr;
 }
-body{
-    background-color: blueviolet;
+.main > h1 {
+  font-size: 70px;
+  padding: 12px;
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
-
-
-.main{
-    text-align: center;
-    padding: 10px;
-    grid-template-rows: 1fr 1fr;
+.drumButtons > button {
+  padding: 40px;
+  width: 150px;
+  margin: 12px;
+  border-radius: 12px;
+  font-size: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(167, 0, 161);
 }
-.main>h1{
-    font-size: 70px;
-    padding: 12px;
-    margin-top: 100px;
-    margin-bottom: 50px;
-
+.w {
+  background-image: url("/images/crash.png");
 }
-.drumButtons>button{
-    padding: 40px;
-    margin: 12px;
-    border-radius: 12px;
-    font-size: 50px;
+.a {
+  background-image: url("/images/kick.png");
 }
-#drumbtn1{
-    background-image: url('/images/tom1.png');
+.d {
+  background-image: url("/images/tom1.png");
+}
+.s {
+  background-image: url("/images/snare.png");
+}
+.j {
+  background-image: url("/images/tom2.png");
+}
+.k {
+  background-image: url("/images/tom3.png");
+}
+.l {
+  background-image: url("/images/tom4.png");
 }
